--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: |
           luarocks install busted
-          luarocks make TREE_SITTER_INCDIR=tree-sitter/lib/include TREE_SITTER_LIBDIR=tree-sitter
+          luarocks make TREE_SITTER_INCDIR=tree-sitter/lib/include TREE_SITTER_LIBDIR=tree-sitter LUA_LIBDIR=./.lua/lib
 
       - name: Test
         run: |
