--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           git clone https://github.com/tree-sitter/tree-sitter-c.git
           cd tree-sitter-c
           mkdir -p ~/.tree-sitter/bin
-          cc src/parser.c -shared -fPIC -o ~/.tree-sitter/bin/c.so -I ~/tree-sitter-prefix/include -L ~/tree-sitter-prefix/lib
+          cc src/parser.c -shared -fPIC -o ~/.tree-sitter/bin/c.so
 
       - name: Install Lua
         uses: leafo/gh-actions-lua@v8.0.0
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: |
           luarocks install busted
-          luarocks make TREE_SITTER_INCDIR=tree-sitter/lib/include TREE_SITTER_LIBDIR=tree-sitter
+          luarocks make
 
       - name: Test
         run: |
