--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           git clone https://github.com/tree-sitter/tree-sitter
           cd tree-sitter
+          make all
           sudo make install
 
       - name: Install tree-sitter-c
@@ -39,7 +40,7 @@ jobs:
       - name: Build
         run: |
           luarocks install busted
-          luarocks make
+          luarocks make USE_STATIC_TREE_SITTER=1 TREE_SITTER_STATIC_LIB=./tree-sitter/libtree-sitter.a TREE_SITTER_INCDIR=./tree-sitter/lib/include
 
       - name: Test
         run: |
