--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@main
+        with:
+          submodules: "recursive"
 
       - name: Install tree-sitter-c
         run: |
